--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    ― Hello World!
   </body>
 </html>
